<resources>
    <string name="app_name">QUIZARY</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
</resources>